[package]
name = "fluid_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version="1.14.1", features=["derive"]}
env_logger = "0.11.0"
log = "0.4.20"
tokio = { version="1.35.1", features = ["macros", "rt-multi-thread"] }
wgpu = "0.19.0"
winit = "0.29.10"
